# utage-slide-1

./: 1_style.html  2_script.html  3_content.html  CLAUDE.md  QUICKSTART.md  README.md  custom-html.html  custom-js.html  custom-js.js  footer-script.html  homepage-body.html  homepage-head.html  index.html  script.md  section2-skills.html  slide-08-pyramid.html  slide2.html  snippet.html  sparkle-effect.html  sparkle-effect.js  utage-body-js.html  utage-gift-5-body.html  utage-gift-5-head.html  utage-head-css.html  utage-html-snippet.html  utage-slide.html
docs/: ARCHITECTURE_DESIGN.md  TECHNICAL_RESEARCH_REPORT.md
extension/: README.md  background.js  content-script.js  manifest.json  styles.css
utage/: slide-08_custom-html.html  slide-08_custom-js.html
video-downloader/: package-lock.json
video-downloader/extension/: background.js  manifest.json  popup.html  popup.js
video-downloader/src/: App.tsx
video-downloader/src-tauri/: tauri.conf.json
video-downloader/src-tauri/src/: lib.rs
video-downloader/src-tauri/src/downloader/: mod.rs
video-downloader/src-tauri/src/extractors/: generic.rs  twitter.rs
video-hacker/: README.md  package.json
video-hacker/extension/: background.js  content.js  manifest.json  popup.html  popup.js
video-hacker/src/: App.css
video-hacker/src-tauri/: Cargo.toml
video-hacker/src-tauri/src/: main.rs
video-hacker/src-tauri/src/extractors/: generic.rs  mod.rs  twitter.rs  youtube.rs
