[package]
name = "video-downloader"
version = "0.1.0"
description = "A simple video downloader"
authors = ["you"]
edition = "2021"

[lib]
name = "video_downloader_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-http = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
regex = "1"
url = "2"
futures = "0.3"
thiserror = "2"
dirs = "6"
uuid = { version = "1", features = ["v4"] }
opener = "0.7"
axum = "0.7"
tower-http = { version = "0.6", features = ["cors"] }

